--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   font_awesome_flutter: ^8.4.0
   http: ^0.12.2
+  flutter_material_pickers: ^1.9.0
 
 dev_dependencies:
   flutter_test:
